# skala-ai-mini-project

./: .gitignore  README.md  app.py  evaluate_embedding.py  evaluate_retrieval.py  pyproject.toml  requirements.txt
agents/: __init__.py  draft_agent.py  formatting_node.py  rag_agent.py  state.py  supervisor.py  trl_evaluation_node.py  web_search_agent.py
prompts/: __init__.py  templates.py
